# LingoLite

./: .gitignore  Dockerfile  LICENSE  README.md  audit_report_lingolite.md  docker-compose.yml  pyproject.toml  requirements.txt  test_rope_fix.py
.github/: pull_request_template.md
.tmp_manual/: bench_audit.py
docs/: blocker_verification.md
lingolite/: __init__.py  encoder_decoder.py  generation_utils.py  mobile_translation_model.py  model_components.py  quantization_utils.py  tokenizer_stub.py  training.py  translation_tokenizer.py  utils.py
scripts/: api_server.py  benchmark.py  evaluate_bleu.py  evaluate_model.py  evaluate_multilingual.py  examples.py  export_mobile.py  export_onnx.py  install.py  make_tiny_dataset.py  smoke_common.py  smoke_infer.py  smoke_train.py  train.py  validate_improvements.py  verify_model_components.py
tests/: conftest.py  test_api_bypass_startup.py  test_audit_optimizations.py  test_audit_regressions.py  test_beam_scorer_fixes.py  test_beam_search.py  test_beam_search_critical_fixes.py  test_beam_search_fixes.py  test_beam_search_shape_and_init.py  test_blocker_fixes.py  test_bottleneck_audit_fixes.py  test_cache_fix.py  test_cached_decoder_wrapper.py  test_checkpoint_portability.py  test_conflict_markers.py  test_encoder_decoder.py  test_evaluate_multilingual.py  test_fit_for_purpose_optimizations.py  test_improvements.py  test_model_components.py  test_model_hardening.py  test_quantization_utils.py  test_smoke_pipeline.py  test_smoke_translate.py  test_tokenizer_consistency.py  test_training.py  test_translation_tokenizer.py  (+4 more)
(+18 files in other folders)
